Update to QPL v1.1.0. Add wrapper class for QPL job.
Remove unnecessary and deprecated job flags.
Clean up link flags in build files.
Update QPL version in README.
Add wrapper class to initialize and store initialized QPL jobs. Remove job initialization from Compress and Uncompress methods.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 cmake_minimum_required(VERSION 3.15)
 
-project(iaa_compressor_test VERSION 0.1.0)
+project(iaa_compressor_test VERSION 0.3.0)
 
 option(COVERAGE "Enable test coverage report" OFF)
 option(EXCLUDE_HW_TESTS "Exclude tests for hardware path, only runs tests on software path" OFF)
@@ -37,11 +37,11 @@ elseif(DEFINED ROCKSDB_PATH)
   message(STATUS "Using ROCKSDB_PATH: ${ROCKSDB_PATH}")
   include_directories(${ROCKSDB_PATH} ${ROCKSDB_PATH}/include)
   target_link_directories(iaa_compressor_test PUBLIC ${ROCKSDB_PATH})
-  target_link_libraries(iaa_compressor_test rocksdb pthread)
+  target_link_libraries(iaa_compressor_test rocksdb)
 endif()
 
 find_package(GTest REQUIRED)
-target_link_libraries(iaa_compressor_test gtest)
+target_link_libraries(iaa_compressor_test gtest pthread)
 
 add_compile_definitions(ROCKSDB_PLATFORM_POSIX)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-rtti")
@@ -55,7 +55,7 @@ if(EXCLUDE_HW_TESTS)
 endif()
 
 add_custom_target(run
-    COMMAND LD_LIBRARY_PATH=${ROCKSDB_DIR}:${TBB_DIR}/lib/intel64/gcc4.8/ ./iaa_compressor_test
+    COMMAND LD_LIBRARY_PATH=${ROCKSDB_DIR} ./iaa_compressor_test
     DEPENDS iaa_compressor_test
 )
 
